--- a/classiq_challenge.ipynb
+++ b/classiq_challenge.ipynb
@@ -66,9 +66,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ander/.local/lib/python3.10/site-packages/classiq/_internals/authentication/token_manager.py:82: UserWarning: Device is already registered.\n",
+      "Generating a new refresh token should only be done if the current refresh token is compromised.\n",
+      "To do so, set the overwrite parameter to true\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import classiq\n",
     "classiq.authenticate()"
@@ -83,9 +94,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening: https://platform.classiq.io/circuit/9283b27f-1b6b-4364-a9a3-eea5142650e4?version=0.36.1\n"
+     ]
+    }
+   ],
    "source": [
     "from classiq import *\n",
     "K =5\n",
@@ -140,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,32 +183,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# The functions you need go here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "# The heart of the code - the function that calculates the hyperbolic tangent\n",
     "@QFunc\n",
     "def compute_tanh(precision: QParam[int],    # The precision of x and tanh_x - how many fraction digits will represent your solution\n",
-    "                 x: QNum,                   # A quantum variable that is represents numbers\n",
-    "                 tanh_x: Output[QNum]       # The output of the function, which means it needs to be initialized within the scope of the function\n",
-    "                 ):\n",
-    "    \n",
-    "    pass #TODO delete pass and write your code here"
+    "                  x: QNum,                   # A quantum variable that is represents numbers\n",
+    "                  tanh_x: Output[QNum]       # The output of the function, which means it needs to be initialized within the scope of the function\n",
+    "                  ):\n",
+    "       tanh_x |= x - 0.33*x**3 + 0.13*x**5 - 0.05*x**7"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " # The functions you need go here\n",
+    " def mult_by_x(tmp: QNum, x: QNum):\n",
+    "   tmp |= tmp*x\n",
+    " \n",
+    " def taylor_series_terms(tmp: QNum, x: QNum, exp: QParam[int], numer: QParam[int], denom: QParam[int]):\n",
+    "       prepare_int(1, tmp)\n",
+    "       repeat(count = exp, iteration=lambda i: mult_by_x(tmp, x))\n",
+    "       tmp |=  tmp * (numer/denom)\n",
+    " \n",
+    " # The heart of the code - the function that calculates the hyperbolic tangent\n",
+    " @QFunc\n",
+    " def compute_tanh(precision: QParam[int],    # The precision of x and tanh_x - how many fraction digits will represent your solution\n",
+    "                  x: QNum,                   # A quantum variable that is represents numbers\n",
+    "                  tanh_x: Output[QNum]       # The output of the function, which means it needs to be initialized within the scope of the function\n",
+    "                  ):\n",
+    "       prepare_int(1, tanh_x)\n",
+    "       tanh_x |= tanh_x * x\n",
+    "       \n",
+    "       tmp = QNum('tmp');\n",
+    "       \n",
+    "       taylor_series_terms(tmp, x, 3, 1, 3)\n",
+    "       tanh_x |= tanh_x - tmp\n",
+    "       \n",
+    "       taylor_series_terms(tmp, x, 5, 2, 15)\n",
+    "       tanh_x |= tanh_x + tmp\n",
+    "       \n",
+    "       taylor_series_terms(tmp, x, 7, 17, 315)\n",
+    "       tanh_x |= tanh_x - tmp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,9 +416,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'qprog_stage_1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[33], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m show(\u001b[43mqprog_stage_1\u001b[49m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'qprog_stage_1' is not defined"
+     ]
+    }
+   ],
    "source": [
     "show(qprog_stage_1)"
    ]
@@ -407,9 +464,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Synthesizing quantum program stage 1 with the execution preferences\n",
+      "Synthesized circuit width: 27, depth: 732\n",
+      "Executing the quantum program\n",
+      "{'x': 0.0, 'y': 1.0}\n",
+      "{'x': 0.0625, 'y': 1.13671875}\n",
+      "{'x': 0.125, 'y': 1.296875}\n",
+      "{'x': 0.1875, 'y': 1.48046875}\n",
+      "{'x': 0.25, 'y': 1.6875}\n",
+      "{'x': 0.3125, 'y': 1.91796875}\n",
+      "{'x': 0.375, 'y': 2.171875}\n",
+      "{'x': 0.4375, 'y': 2.44921875}\n",
+      "{'x': 0.5, 'y': 2.75}\n",
+      "{'x': 0.5625, 'y': 3.07421875}\n",
+      "{'x': 0.625, 'y': 3.421875}\n",
+      "{'x': 0.6875, 'y': 3.79296875}\n",
+      "{'x': 0.75, 'y': 4.1875}\n",
+      "{'x': 0.8125, 'y': 4.60546875}\n",
+      "{'x': 0.875, 'y': 5.046875}\n",
+      "{'x': 0.9375, 'y': 5.51171875}\n",
+      "Results of stage 1 \n",
+      " Max distance =  4.777647230395658\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "def evaluate_score_stage_1(results, user_input_precision):\n",
@@ -446,7 +531,7 @@
     "\n",
     "# Execution parameters\n",
     "num_shots = 1000\n",
-    "backend_name = \"aer_simulator\" # \"aer_simulator\", \"nvidia_state_vector_simulator\"\n",
+    "backend_name = \"nvidia_state_vector_simulator\" # \"aer_simulator\", \"nvidia_state_vector_simulator\"\n",
     "\n",
     "qmod_stage_1 = set_execution_preferences(qmod_stage_1, \n",
     "                                        ExecutionPreferences(\n",
@@ -470,9 +555,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'qprog_stage_2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[51], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m generated_circuit \u001b[38;5;241m=\u001b[39m GeneratedCircuit\u001b[38;5;241m.\u001b[39mparse_obj(json\u001b[38;5;241m.\u001b[39mloads(\u001b[43mqprog_stage_2\u001b[49m))\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mResults of stage 2 \u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mPrecision = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mprecision_value_stage_2\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, Circuit depth = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mgenerated_circuit\u001b[38;5;241m.\u001b[39mtranspiled_circuit\u001b[38;5;241m.\u001b[39mdepth\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'qprog_stage_2' is not defined"
+     ]
+    }
+   ],
    "source": [
     "generated_circuit = GeneratedCircuit.parse_obj(json.loads(qprog_stage_2))\n",
     "print(f'\\nResults of stage 2 \\nPrecision = {precision_value_stage_2}, Circuit depth = {generated_circuit.transpiled_circuit.depth}')"
@@ -492,8 +589,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+  },
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('classiq_0_36_1')",
+   "display_name": "Python 3.10.12 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -507,7 +607,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4,
   "vscode": {
